--- a/gitTest.htm
+++ b/gitTest.htm
@@ -13,5 +13,8 @@
 	<h1>This is a test</h1>
 	<p>lets see</p>
 	<p>hello</p>
+	<h3>another test</h3>
+	<h5>lets see</h5>
+	<h5>lets see</h5>
 </body>
 </html>
